<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">NMT Minecraft Club App</string>
    <string name="action_settings">Settings</string>
    <string name="server">Server</string>
    <string name="news">News</string>
    <string name="about">About</string>
    <string name="activity_server">ServerActivity</string>
    <string name="activity_news">NewsActivity</string>
    <string name="activity_about">AboutActivity</string>
    <string name="activity_book">BookActivity</string>
    <string name="worlds">Worlds</string>
    <string name="etiquette">Etiquette</string>
    <string name="plugins">Plugins</string>
    <string name="ranks">Ranks</string>
    <string name="features">Features</string>
    <string name="ip">IP Address</string>
    <string name="meetings">Meetings</string>
    <string name="other">Other</string>
    <string name="events">Events</string>
    <string name="constitution">Constitution</string>
    <string name="officials">Officials</string>
    <string name="website">Website</string>
    <string name="contact">Contact Us</string>
    <string name="back">Back</string>
    <string name="book_and_quill">Book and Quill</string>
    <string name="title_activity_book">BookActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="new_entry">New</string>
    <string name="load">Load</string>
    <string name="my_location">Me</string>
    <string name="friend_location">Friend</string>
    <string name="name">Name:</string><string name="delete">Delete</string>
    
    <string name="x">X:</string>
    <string name="z">Z:</string>
    <string name="y">Y:</string>
    <string name="clear">Clear</string><string name="save">Save</string>
    
    
</resources>