<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/app_news_page"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".NewsActivity" >

    <RelativeLayout
        android:id="@+id/relativeLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" >

        <ImageButton
            android:id="@+id/events"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:background="@drawable/events"
            android:alpha="0.25"
            android:contentDescription="@string/events"
            android:onClick="handleButton" />

    </RelativeLayout>

    <ImageButton
        android:id="@+id/other"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/relativeLayout1"
        android:background="@drawable/other"
        android:alpha="0.25"
        android:contentDescription="@string/other"
        android:onClick="handleButton" />

    <ImageButton
        android:id="@+id/meetings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignTop="@+id/relativeLayout1"
        android:background="@drawable/meetings"
        android:alpha="0.25"
        android:contentDescription="@string/meetings"
        android:onClick="handleButton" />
    
    <TextView
        android:id="@+id/display"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/relativeLayout1"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:background="@color/lightGray"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:onClick="handleButton" 
        android:textIsSelectable="true"/>

    <ImageButton
        android:id="@+id/back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:background="@drawable/back"
        android:contentDescription="@string/back"
        android:onClick="handleButton" />

</RelativeLayout>