<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/app_server_page"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ServerActivity" >

    <RelativeLayout
        android:id="@+id/layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true" 
        android:layout_alignParentTop="true">

        <ImageButton
            android:id="@+id/worlds"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/ip"
            android:background="@drawable/worlds"
            android:contentDescription="@string/worlds"
            android:onClick="handleButton" 
            android:alpha="0.25"/>

        <ImageButton
            android:id="@+id/ranks"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="10dp"
            android:background="@drawable/rank"
            android:contentDescription="@string/ranks"
            android:onClick="handleButton" 
            android:alpha="0.25"/>

        <ImageButton
            android:id="@+id/ip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginRight="10dp"
            android:background="@drawable/ip"
            android:contentDescription="@string/ip"
            android:onClick="handleButton" 
            android:alpha="0.25"/>

        <ImageButton
            android:id="@+id/plugins"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_toLeftOf="@+id/ranks"
            android:background="@drawable/plugins"
            android:contentDescription="@string/plugins"
            android:onClick="handleButton" 
            android:alpha="0.25"/>

        <ImageButton
            android:id="@+id/etiquette"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:background="@drawable/ettiquite"
            android:contentDescription="@string/etiquette"
            android:onClick="handleButton" 
            android:alpha="0.25"/>

    </RelativeLayout>
	
    <RelativeLayout
        android:id="@+id/text_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/back"
        android:layout_below="@+id/layout"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="10dp" 
        android:background="@drawable/server_worlds">"

	    <TextView
	        android:id="@+id/ip_display"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_centerHorizontal="true"
	        android:layout_centerVertical="true"
	        android:textColor="@color/black"
	        android:layout_below="@+id/ip"
	        android:textSize="30sp"
	        android:onClick="handleButton" 
	        android:textIsSelectable="true"
	        android:visibility="gone"/>
	    
	    <TextView
	        android:id="@+id/world_display"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignParentBottom="true"
	        android:layout_alignParentLeft="true"
	        android:layout_alignParentRight="true"
	        android:layout_alignParentTop="true"
	        android:layout_margin="22dp"
	        android:onClick="handleButton"
	        android:textColor="@color/black"
	        android:textIsSelectable="true"
	        android:textSize="18sp"
	        android:visibility="gone" />
	    
	    <TextView
	        android:id="@+id/etiquette_display"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_below="@+id/layout"
	        android:layout_centerHorizontal="true"
	        android:textSize="25sp"
	        android:textColor="@color/black"
	        android:layout_marginTop="60dp"
	        android:layout_marginLeft="40dp"
	        android:layout_marginRight="15dp"
	        android:onClick="handleButton" 
	        android:textIsSelectable="true"
	        android:visibility="gone"/>
	    
	    <TextView
	        android:id="@+id/plugin_display"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignParentBottom="true"
	        android:layout_alignParentRight="true"
	        android:layout_alignParentTop="true"
	        android:layout_toRightOf="@+id/ip_display"
	        android:layout_margin="22dp"
	        android:onClick="handleButton"
	        android:textColor="@color/black"
	        android:textIsSelectable="true"
	        android:visibility="gone" />
	    
	    <TextView
	        android:id="@+id/rank_display"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_centerHorizontal="true"
	        android:layout_centerVertical="true"
	        android:layout_margin="22dp"
	        android:onClick="handleButton"
	        android:textColor="@color/black"
	        android:textIsSelectable="true"
	        android:visibility="gone" />

    </RelativeLayout>

    <ImageButton
        android:id="@+id/back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:background="@drawable/back"
        android:contentDescription="@string/back"
        android:onClick="handleButton" />

</RelativeLayout>